--- a/cursos.html
+++ b/cursos.html
@@ -24,7 +24,10 @@
     }
     </script>
 </head>
-<body>
+<body class="bg-gray-300 o">
+    <header id="header">
+
+    </header>
     
 </body>
 </html>
