fix: corrige algumas coisas no footer

--- a/index.html
+++ b/index.html
@@ -255,10 +255,9 @@
 
         <hr class="border-t-2 border-gray-300/40 m-4">
 
-        <div class="flex flex-row justify-center text-center">
-            <img src="images_prova/copyright.svg" alt="copyritgh">
-            <p class="font-inter text-gray-500">2025 EduTech Academy. Todos os direitos
-                        reservados.</p>
+        <div class="flex flex-row justify-center text-center p-[2rem] text-gray-500">
+            <img src="images_prova/copyright.svg" alt="copyright" class="w-4 h-4 filter brightness-0 opacity-40">
+            <p class="font-inter">2025 EduTech Academy. Todos os direitos reservados.</p>
         </div>
     </footer>
 
